sumo/tests/traci/Scenario/DomainTL/InvalidObjectId/options.traci
sumo.exe --no-step-log --net-file net.net.xml --route-files routes.rou.xml --penetration 1.0 --remote-port 8876 --netstate-dump netstate_dump.xml
endsumo
TraCITestClient.exe -def scenario_tl_invalidobjectid.prog -p 8876 -h localhost -o testclient_out.txt
